--- a/_posts/2019-10-29-Hello-2019.md
+++ b/_posts/2019-10-29-Hello-2019.md
@@ -1,9 +1,9 @@
 ---
 layout:     post
-title:      Hello 2017
+title:      Hello 2019, Hello Blog
 subtitle:    "\"Hello World, Hello Blog\""
-date:       2017-02-04
-author:     BY
+date:       2019-10-29
+author:     Jimmy
 header-img: img/post-bg-2015.jpg
 catalog: true
 tags:
