--- a/_posts/2019-11-01-Netty-2019.md
+++ b/_posts/2019-11-01-Netty-2019.md
@@ -12,15 +12,68 @@ tags:
     - Java
 ---
 
-> “🙉🙉🙉 ”
 
-## 前言
+## Netty是什么？
 
-Netty必知必会。
+Netty是一个网络应用程序框架和工具，它是建立在NIO基础之上，Netty在NIO之上又提供了更高层次的抽象。
 
-## 正文
+## BIO、NIO、AIO区别
 
+- BIO （Blocking I/O）：同步阻塞I/O模式。
+- NIO （New I/O）：同步非阻塞模式。
+- AIO （Asynchronous I/O）：异步非阻塞I/O模型。
+
+BIO全称Block-IO，是一种同步且阻塞的通信模式，是一个比较传统的通信方式，模式简单，使用方便，但并发处理能力低，通信耗时，依赖网速。
+
+Java NIO，全程Non-Block IO，是一种非阻塞同步的通信模式。
+
+NIO以块的方式来处理数据，而BIO以流的方式来处理数据。面向流的 I/O 系统一次一个字节地处理数据。一个输入流产生一个字节的数据，一个输出流消费一个字节的数据。面向块的 I/O 系统以块的形式处理数据。每一个操作都在一步中产生或者消费一个数据块。按块处理数据比按(流式的)字节处理数据要快得多。但是面向块的 I/O 缺少一些面向流的 I/O 所具有的优雅性和简单性。
+
+AIO基于回调通知机制来返回结果，而非主动轮询。
+
+## NIO组成
+
+- 1、Buffer
+
+- 2、Channel 
+
+- 3、Selector
+
+传统的IO操作面向数据流，意味着每次从流中读一个或多个字节，直至完成，数据没有被缓存在任何地方。
+
+NIO操作面向缓冲区，数据从Channel读取到Buffer缓冲区，随后在Buffer中处理数据。
+
+1、流是单向的，通道是双向的，可读可写。 
+
+2、流读写是阻塞的，通道可以异步读写。 
+
+3、流中的数据可以选择性的先读到缓存中，通道的数据总是要先读到一个缓存中，或从缓存中写入
+
+### 选择器的概念：
+想想一个场景：在一个养鸡场，有这么一个人，每天的工作就是不停检查几个特殊的鸡笼，如果有鸡进来，有鸡出去，有鸡生蛋，有鸡生病等等，就把相应的情况记录下来，如果鸡场的负责人想知道情况，只需要询问那个人即可。
+
+在这里，这个人就相当Selector，每个鸡笼相当于一个SocketChannel，每个线程通过一个Selector可以管理多个SocketChannel。
+
+## 什么是TCP 粘包/拆包 
+### 问题原因
+应用层面使用了Netty，但是对于操作系统来说，只认TCP协议，尽管我们的应用层是按照 ByteBuf 为 单位来发送数据，server按照Bytebuf读取，但是到了底层操作系统仍然是按照字节流发送数据，因此，数据到了服务端，也是按照字节流的方式读入，然后到了 Netty 应用层面，重新拼装成 ByteBuf，而这里的 ByteBuf 与客户端按顺序发送的 ByteBuf 可能是不对等的。因此，我们需要在客户端根据自定义协议来组装我们应用层的数据包，然后在服务端根据我们的应用层的协议来组装数据包，这个过程通常在服务端称为拆包，而在客户端称为粘包。
+
+拆包和粘包是相对的，一端粘了包，另外一端就需要将粘过的包拆开，发送端将三个数据包粘成两个 TCP 数据包发送到接收端，接收端就需要根据应用协议将两个数据包重新组装成三个数据包。
+
+### 解决方式
+> 1. 固定长度拆包器：客户端和服务端约定好包大小来发包解包
+> 1. 行拆包器：换行符为包分隔符
+> 1. 分隔符拆包器：行拆包器的通用版，自定义分隔符
+> 1. 基于长度域拆包器：包头自定义包的长度
+
+## Netty零拷贝的实现原理
 
 ## 参考
 
 [彻底理解Netty，这一篇文章就够了](https://juejin.im/post/5bdaf8ea6fb9a0227b02275a)
+
+[漫画：一文学会面试中常问的 IO 问题!](https://mp.weixin.qq.com/s/Gq8ABlEVolLW3wJ7vsSSFw)
+
+[深入浅出NIO之Channel、Buffer](https://mp.weixin.qq.com/s?__biz=MzIwMzY1OTU1NQ==&mid=2247483792&idx=1&sn=bf48352a05d4727b69b9e3dd02663b91&chksm=96cd41dca1bac8caafb4f4a90fd1a6887c9e49fd221225080f657037ebe57c2e8cd438198c08&scene=21#wechat_redirect)
+
+[深入浅出NIO之Selector实现原理](https://juejin.im/entry/5a422b75f265da430e4f6b99)
