--- a/_posts/2019-11-01-Netty-2019.md
+++ b/_posts/2019-11-01-Netty-2019.md
@@ -4,7 +4,7 @@ title:      Netty必知必会
 subtitle:    "\"Netty Introduction\""
 date:       2019-11-01
 author:     Jimmy
-header-img: img/post-bg-2015.jpg
+header-img: img/business-building-sky-scraper.jpeg
 catalog: true
 tags:
     - Netty
