add thread pool

--- a/_posts/2019-11-01-Netty-2019.md
+++ b/_posts/2019-11-01-Netty-2019.md
@@ -54,6 +54,8 @@ NIO操作面向缓冲区，数据从Channel读取到Buffer缓冲区，随后在B
 
 在这里，这个人就相当Selector，每个鸡笼相当于一个SocketChannel，每个线程通过一个Selector可以管理多个SocketChannel。
 
+## Netty的线程模型
+
 ## 什么是TCP 粘包/拆包 
 ### 问题原因
 应用层面使用了Netty，但是对于操作系统来说，只认TCP协议，尽管我们的应用层是按照 ByteBuf 为 单位来发送数据，server按照Bytebuf读取，但是到了底层操作系统仍然是按照字节流发送数据，因此，数据到了服务端，也是按照字节流的方式读入，然后到了 Netty 应用层面，重新拼装成 ByteBuf，而这里的 ByteBuf 与客户端按顺序发送的 ByteBuf 可能是不对等的。因此，我们需要在客户端根据自定义协议来组装我们应用层的数据包，然后在服务端根据我们的应用层的协议来组装数据包，这个过程通常在服务端称为拆包，而在客户端称为粘包。
