--- a/_posts/2019-11-02-Synchronized-2019.md
+++ b/_posts/2019-11-02-Synchronized-2019.md
@@ -13,12 +13,15 @@ tags:
 
 > “🙉🙉🙉 ”
 
-## 前言
+## Synchronized实现原理
 
-Synchronized必知必会。
+## 对象锁与类锁
 
-## 正文
+## 什么是可重入性，为什么说Synchronized是可重入锁
 
+## 什么是锁消除和锁粗化
+
+## 悲观锁与乐观锁
 
 ## 参考
 
