--- a/_posts/2010-11-09-java-gc-2019.md
+++ b/_posts/2010-11-09-java-gc-2019.md
@@ -14,12 +14,49 @@ tags:
 > “🙉🙉🙉 ”
 
 ## GC算法
+### 垃圾寻找算法
+- 引用计数算法
 
+给对象中添加一个引用计数器，每当有一个地方引用它时，计数器值加1；当引用失效时，计数器值减1；任何时候计数器值为0的对象就是不可能再背使用的。
+
+但是引用计数计算无法解决对象之间相互引用的问题，所以主流的Java虚拟机没有选用该算法。
+
+- 可达性分析算法
+
+通过一系列的“GC Roots“的对象作为起始点，从这些节点开始向下搜索，搜索所走过的路径称为引用链，当一个对象到GC Roots没有任何的引用链相连时，则证明该对象是不可用的。
+
+在Java中，可作为GC Roots的对象包括：
+> 1. 虚拟机栈（栈帧中本地变量表）中引用的对象
+> 1. 方法区中类静态属性引用的对象
+> 1. 方法区中常量引用的对象
+> 1. 本地方法栈中（native方法）引用的对象
+
+四种引用：强引用、软引用、弱引用和虚引用
+
+### 垃圾收集算法
+- 标记-清除算法
+
+首先标记出所有需要回收的对象，在标记完成后统一回收所有被标记的对象。其存在两点不足：（1）效率问题，标记和清除两个过程的效率都不高；（2）空间问题，标记清除后会产生大量不连续的内存碎片。
+
+- 复制算法
+
+可用的内存容量分为大小相等的两块，每次只使用其中一块，当一块使用完，将存活的对象复制到另一块上，然后在将已使用的内存空间一次清理掉。
+
+代价是，空间利用不足，每次只能利用一般。
+
+- 标记-整理算法
+- 分代收集算法
 
 ## 垃圾回收器
-
+- serial收集器
+- parnew收集器
+- parallel scavenge 收集器
+- serial old收集器
+- parallel old 收集器
+- cms收集器
+- g1收集器
 
 
 ## 参考
 
-[线程、多线程与线程池总结](https://www.jianshu.com/p/b8197dd2934c)
+[深入理解Java虚拟机（第2版） PDF超清版](https://www.jianshu.com/p/e60407c0af09?utm_campaign=maleskine&utm_content=note&utm_medium=seo_notes&utm_source=recommendation)
