--- a/_posts/2019-11-09-java-gc-2019.md
+++ b/_posts/2019-11-09-java-gc-2019.md
@@ -11,10 +11,7 @@ tags:
     - GC
 ---
 
-> “🙉🙉🙉 ”
-
-## GC算法
-### 垃圾寻找算法
+## 垃圾寻找算法
 - 引用计数算法
 
 给对象中添加一个引用计数器，每当有一个地方引用它时，计数器值加1；当引用失效时，计数器值减1；任何时候计数器值为0的对象就是不可能再背使用的。
@@ -33,7 +30,7 @@ tags:
 
 四种引用：强引用、软引用、弱引用和虚引用
 
-### 垃圾收集算法
+## 垃圾收集算法
 - 标记-清除算法
 
 首先标记出所有需要回收的对象，在标记完成后统一回收所有被标记的对象。其存在两点不足：（1）效率问题，标记和清除两个过程的效率都不高；（2）空间问题，标记清除后会产生大量不连续的内存碎片。
@@ -42,10 +39,17 @@ tags:
 
 可用的内存容量分为大小相等的两块，每次只使用其中一块，当一块使用完，将存活的对象复制到另一块上，然后在将已使用的内存空间一次清理掉。
 
-代价是，空间利用不足，每次只能利用一般。
+代价是，空间利用不足，每次只能利用一半。
 
 - 标记-整理算法
+
+**复制收集算法**在对象存活率较高时就要进行较多的复制操作，效率会变低，而且需要50%的空间进行分配担保。所以老年代一般不能直接选用复制算法。
+
+**标记-整理算法**，标记过程跟标记清除算法一样，但后续步骤不是直接对可回收对象进行清理，而是让所有存活的对象都向一端移动，然后直接清理掉边界以外的内存。
+
 - 分代收集算法
+
+根据对象存活周期的不同将内存划分为几块，一般把Java堆分为新生代和老年代，根据各个年代的特点采用最适当的收集算法。新生代采用**复制算法**，老年代采用**标记-清除**或者**标记-整理**算法。
 
 ## 垃圾回收器
 - serial收集器
