--- a/_posts/2019-11-09-java-gc-2019.md
+++ b/_posts/2019-11-09-java-gc-2019.md
@@ -7,8 +7,7 @@ author:     Jimmy
 header-img: img/post-bg-2015.jpg
 catalog: true
 tags:
-    - java
-    - GC
+    - JVM
 ---
 
 ## 垃圾寻找算法
@@ -53,7 +52,13 @@ tags:
 
 ## 垃圾回收器
 - serial收集器
+
+单线程收集器，只会使用一个CPU或者一条线程去完成垃圾收集工作，并且在进行垃圾收集时，必须暂停其他所有的工作线程，直到它收集结束。
+
 - parnew收集器
+
+Serial收集器的多线程版本。
+
 - parallel scavenge 收集器
 - serial old收集器
 - parallel old 收集器
@@ -64,3 +69,5 @@ tags:
 ## 参考
 
 [深入理解Java虚拟机（第2版） PDF超清版](https://www.jianshu.com/p/e60407c0af09?utm_campaign=maleskine&utm_content=note&utm_medium=seo_notes&utm_source=recommendation)
+
+[深入理解JVM(3)——7种垃圾收集器](https://crowhawk.github.io/2017/08/15/jvm_3/#%E7%9B%B8%E5%85%B3%E6%A6%82%E5%BF%B5)
