--- a/_posts/2019-11-09-java-gc-2019.md
+++ b/_posts/2019-11-09-java-gc-2019.md
@@ -60,11 +60,57 @@ tags:
 Serial收集器的多线程版本。
 
 - parallel scavenge 收集器
+
+并行的多线程新生代收集器，使用复制算法，收集目标是达到一个可控制的吞吐量。
+
+停顿时间越短就越适合需要和用户交互的程序，而高吞吐量则可以高效利用CPU时间，尽快完成程序的运算任务，主要适合在后台啊运算而不需要太多交互的任务。
+
 - serial old收集器
+
+单线程收集器，使用**标记-整理算法**。
+
 - parallel old 收集器
+
+Parallel Old收集器是Parallel Scavenge收集器的老年代版本，使用多线程和**标记-整理算法**。
+
 - cms收集器
+
+CMS（Concurrent Mark Sweep）收集器，并发垃圾收集器，以获取最短回收停顿时间为目标的收集器，基于标记-清除算法实现。
+
+CMS收集器的工作流程分为4个步骤：
+
+> 1. 初始标记：仅标记下GC Roots可达对象，速度快，但是需要“stop the world”
+> 1. 并发标记：进行GC Roots Tracing过程，整个过程耗时最长
+> 1. 重新标记：为了修正并发标记期间因用户程序继续运作而导致标记产生变动的那一部分对象的标记记录，也需要“stop the world”
+> 1. 并发清除
+
+并发标记和并发清除过程收集器线程可以与用户线程一起工作。
+
+CMS收集器优点：并发收集，低停顿
+
+CMS收集器缺点：
+> 1. 对CPU资源非常敏感：在并发阶段，虽然不会导致用户线程停顿，但会因为占用一部分线程而导致应用程序变慢，总吞吐量降低。CMS默认启动的回收线程数是（CPU数量+3）/4。
+> 1. 无法处理浮动垃圾：由于CMS并发清除阶段用户还在运行着，伴随程序运行自然还会有新的垃圾不断产生，只能下一次GC再清除。
+> 1. 标记-清除算法导致空间碎片：无法找到足够大连续空间来分配当前对象。
+
 - g1收集器
 
+> 1. 并行与并发：G1能充分利用多CPU、多核环境下的硬件优势，使用多个CPU来缩短“stop the world”停顿时间，通过并发的方式让Java程序进行执行。
+> 1. 分代收集：G1可以不需要其他收集器的配合就能独立管理整改GC堆，它能够采用不同的方式去处理新创建的对象和已存活一段时间、熬过多次GC的旧对象来获取更好的收集效果。
+> 1. 空间整合：标记-整理算法
+> 1. 可预测的停顿：G1除了降低停顿外，还能建立可预测的停顿时间模型，能让使用者明确指定一个长度为M毫秒的时间片段内，消耗在GC上的时间不得超过N毫秒。
+
+在G1之间的收集器进行收集的范围都是整个新生代或者老生代，而G1将整个Java堆划分为多个大小相等的独立区域（Region），虽然还保留新生代和老年代的概念，但新生代和老年代不再是物理隔离的了，而都是一部分Region（无需连续）的集合。
+
+建立可预测时间模型时，G1跟踪各个region里面的垃圾堆积的价值大小（回收所获得的空间大小以及回收所需时间的经验值），在后台维护一个优先列表，每次根据允许的收集时间，优先回收价值最大的Region。这保证了G1收集器在有限的时间内可以获取尽可能高的收集效率。
+
+避免全堆扫描--Remembered Set
+
+G1收集器的运作大致可划分为以下几个步骤：
+> 1. 初始标记：需要停顿线程
+> 1. 并发标记
+> 1. 最终标记：需要停顿线程，但是可并行执行
+> 1. 筛选回收：首先对各个region中的回收价值和成本进行排序，根据用户所期望的GC停顿时间来制定回收计划。
 
 ## 参考
 
