--- a/_posts/2020-07-01-unique-id-2020.md
+++ b/_posts/2020-07-01-unique-id-2020.md
@@ -24,7 +24,7 @@ tags:
 * 4. **信息安全**：如果ID是连续的，恶意用户的扒取工作就非常容易做了，直接按照顺序下载指定URL即可；如果是订单号就更危险了，竞对可以直接知道我们一天的单量。所以在一些应用场景下，会需要ID无规则、不规则
 
 ## 分布式系统唯一ID实现方案
-![分布式系统唯一ID实现方案](../img/2020-07-01-unique-id-2020/unique_id_01.png)
+![分布式系统唯一ID实现方案](http://github.com/linbing1219/linbing1219.github.io/raw/master/img/2020-07-01-unique-id-2020/unique_id_01.png)
 
 ### 1、UUID
 
