--- a/_posts/2019-10-30-Java-Basis-2019.md
+++ b/_posts/2019-10-30-Java-Basis-2019.md
@@ -10,7 +10,6 @@ tags:
     - Java基础
     - Java语法
     - HashMap
-    - 面试
 ---
 
 > “🙉🙉🙉 ”
@@ -21,7 +20,7 @@ tags:
 
 ## 正文
 
-### HashMap实现原理 [参考博文](https://yikun.github.io/2015/04/01/Java-HashMap%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86%E5%8F%8A%E5%AE%9E%E7%8E%B0/)
+![](https://github.com/linbing1219/linbing1219.github.io/raw/master/img/2019-10-30-Java-Basis-2019/hashmap.png)
 
 基于Map接口实现，允许null键/值、非同步、不保证有序、也不保证序号不随时间变化。
 
@@ -30,6 +29,8 @@ tags:
 简单的说，Capacity就是buckets的数目，Load factor就是buckets填满程度的最大比例。如果对迭代性能要求很高的话不要把capacity设置过大，也不要把load factor设置过小。当bucket填充的数目（即hashmap中元素的个数）大于capacity*load factor时就需要调整buckets的数目为当前的2倍。
 
 #### put函数的实现
+
+![](https://github.com/linbing1219/linbing1219.github.io/raw/master/img/2019-10-30-Java-Basis-2019/hashmap_put.png)
 
 put函数大致的思路为：
 
@@ -138,7 +139,9 @@ final Node<K,V> getNode(int hash, Object key) {
 }
 ```
 
-### JDK6、JDK7、JDK8对于HashMap的不同实现
+### JDK7、JDK8对于HashMap的不同实现
+- 1、防止扩容resize时循环引用问题，jdk8改成链表尾插，而jdk7是头插
+- 2、数据结构的不同：对于jdk8而言，链表长度大于8时（桶的数量必须大于64，小于64的时候只会扩容），链表转为红黑树
 
 ### HashMap和HashTable的区别
 
@@ -178,4 +181,11 @@ ConcurrentHashMap<String, String> concurrentHashMap = new ConcurrentHashMap<>();
 > 1. ConcurrentHashMap会使用多个锁
 
 - 方法3：
-使用HashTable，已弃用。
+使用HashTable。
+
+## 参考资料
+ [HashMap工作原理及实现](https://yikun.github.io/2015/04/01/Java-HashMap%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86%E5%8F%8A%E5%AE%9E%E7%8E%B0/)
+ 
+ [HashMap几个刁钻的面试题，第六个我就跪了](https://zhuanlan.zhihu.com/p/87929020)
+ 
+ [Java 8系列之重新认识HashMap](https://tech.meituan.com/2016/06/24/java-hashmap.html)
